# llm-agent

./: .env.example  .gitignore  object.js  pyproject.toml  requirements.txt
examples/chapter2/: 01_text_generation.py  02_stream_chat.py  03_function_calling.py  04_response_format.py  05_vision.py  06_audio.py  07_image_generation.py  08_langchain_chat.py  09_langchain_translation.py  10_langchain_csv_tool.py  11_langchain_plan_and_solve.py  12_gradio_interface.py  13_gradio_blocks.py  14_gradio_components.py  15_gradio_ui_layout.py  16_gradio_state.py  17_gradio_chat.py  18_gradio_translation.py  19_gradio_table.py  20_gradio_plan_and_solve.py
examples/chapter3/: 01_knowledge_prompt.py  02_documents.py  03_rag.py  04_search_tool.py  05_python_repl_tool.py  06_custom_tools.py  07_memory.py  08_persona.py  fortune_tools.py  plant_documents.py
examples/chapter4/: 02_multi_agent_system_construction.py
llm_agent/: __init__.py  config.py  openai_utils.py  paths.py  secrets.py
tests/: test_config.py  test_secrets.py
