[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = ""
authors = ["aRySt0cat <ryuta.academic@gmail.com>"]
readme = "README.md"
packages = [{ include = "llm_agent" }]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.1"
ipywidgets = "^8.1.3"
openai = "^1.34.0"
tiktoken = "^0.7.0"
langchain = "^0.2.5"
langchain-core = ">=0.2.40,<0.3"
gradio = "^4.36.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
langchain-openai = "^0.1.17"
langchain-chroma = ">=0.1.2,<0.2"
langchain-community = ">=0.2,<0.3"
langchain-experimental = ">=0.0.64,<0.1"
langgraph = ">=0.2,<0.3"
tavily-python = "^0.5"
google-search-results = "^2.4.2"
mem0ai = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
